[gd_scene load_steps=2 format=3 uid="uid://cv7fhl8qauyr4"]

[ext_resource type="Script" uid="uid://cna67jm3wbf2a" path="res://UI/Puzzles/klotski_puzzle.gd" id="1_klotski"]

[node name="KlotskiPuzzle" type="CanvasLayer"]
process_mode = 3
layer = 25
script = ExtResource("1_klotski")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.8)

[node name="PuzzlePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -360.0
offset_right = 280.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PuzzlePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 15.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.15, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "FREE THE SHRED"
horizontal_alignment = 1

[node name="PuzzleContainer" type="Control" parent="PuzzlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -260.0
offset_right = 240.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridBackground" type="ColorRect" parent="PuzzlePanel/PuzzleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.1, 0.08, 1)

[node name="ExitMarker" type="ColorRect" parent="PuzzlePanel/PuzzleContainer"]
layout_mode = 0
offset_left = 120.0
offset_top = 600.0
offset_right = 360.0
offset_bottom = 630.0
color = Color(0.3, 0.7, 0.3, 0.6)

[node name="HintLabel" type="Label" parent="PuzzlePanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Drag the blocks to release the shred"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PuzzlePanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 45.0
grow_horizontal = 0
text = "X"

[node name="IntroPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
